fix dark mode display in footer section

--- a/src/components/social.css
+++ b/src/components/social.css
@@ -14,6 +14,9 @@
 }
 
 .social-icons {
+      fill: black;
+}
+body.dark-mode .social-icons {
       fill: white
 }
 .socials {
